# foli-cli

./: .gitignore  Pipfile  README.md  setup.cfg
src/folicli/: folicli.py  messagebroker.py  observable.py
src/folicli/fetcher/: foli.py
src/folicli/ui/: observable.py  textui.py
src/folicli/ui/tui/blocks/: header.py  statusbar.py  timedisplay.py  titlebar.py
src/folicli/ui/tui/components/: compositecomponent.py  textwindow.py  window.py
tests/: off_test_observable_integration.py  test_messagebroker.py  test_observable.py
tests/ui/: test_observable.py
tests/ui/tui/components/: test_textwindow.py  test_window.py
