[metadata]
name = foli-cli
version = 0.0.1
author = Markus Ijäs
description = A simple CLI application to see bus timetables and follow buses in real time in Turku area.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mtijas/foli-cli
project_urls =
    Bug Tracker = https://github.com/mtijas/foli-cli/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPL 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

